RESOLVED FIXED26063
Chromium/skia has problems with single stop gradients at 1.0
https://bugs.webkit.org/show_bug.cgi?id=26063
Summary Chromium/skia has problems with single stop gradients at 1.0
Stephen White
Reported 2009-05-28 08:48:51 PDT
On gradients with a single stop at 1.0, Chromium/skia renders the colour incorrectly. See the following layout tests: LayoutTests/svg/W3C-SVG-1.1/pservers-grad-16-b.svg LayoutTests/svg/custom/gradient-stop-corner-cases.svg LayoutTests/svg/custom/js-late-gradient-and-object-creation.svg
Attachments
Minor logic error and comment (1.59 KB, patch)
2009-05-28 09:02 PDT, Stephen White
dglazkov: review+
Stephen White
Comment 1 2009-05-28 09:02:11 PDT
Created attachment 30740 [details] Minor logic error and comment
Dimitri Glazkov (Google)
Comment 2 2009-05-28 09:17:19 PDT
Comment on attachment 30740 [details] Minor logic error and comment Awesome.
Note You need to log in before you can comment on or make changes to this bug.