WebCore/platform/graphics/skia/GradientSkia.cpp
@@ -60,12 +60,14 @@ static SkColor makeSkColor(float a, float r, float g, float b)
 // ends as necessary.
 static size_t totalStopsNeeded(const Gradient::ColorStop* stopData, size_t count)
 {
+    // N.B.:  The tests in this function should kept in sync with the ones in
+    // fillStops(), or badness happens.
     const Gradient::ColorStop* stop = stopData;
     size_t countUsed = count;
     if (count < 1 || stop->stop > 0.0)
         countUsed++;
     stop += count - 1;
-    if (count < 2 || stop->stop < 1.0)
+    if (count < 1 || stop->stop < 1.0)
         countUsed++;
     return countUsed;
 }
